--- a/rock.html
+++ b/rock.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="rock.css" />
   </head>
   <body>
-    <script type="module" src="rock.js"></script>
+    <h2 id="myH2">This is an example h2</h2>
+    <p id="myP">This is an example paragraph.</p>
+    <p id="myP2">This is also an example paragraph.</p>
+    <div id="myDiv">This is an example div.</div>
+    <br />
+
+    <button type="button" onclick="myFunction()">Set text color</button>
+    <script src="rock.js"></script>
   </body>
+
+  <!-- <button id="paperBtn" type="button">paper</button>
+    <button id="scissorsBtn" type="button">scissors</button> -->
 </html>
